<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expense Tracker</string>
    <string name="tableLayoutStretchColumns">1,2,3</string>
    <string name="tenPercent">10%</string>
    <string name="fifteenPercent">15%</string>
    <string name="twentyPercent">20%</string>
    <string name="billTotalLabel">Bill total:\ </string>
    <string name="billTotalHint">The total amount charged, plus tax</string>
    <string name="tipTextLabel">Tip:\ </string>
    <string name="totalTextLabel">Total:\ </string>
    <string name="customTextLabel">Custom:\ </string>
    <string name="customTipReadoutPlaceholder">%</string>
    <string name="action_settings">[no settings yet]</string>
    <string name="zeroCurrency">$0.00</string>
    <string name="currencySymbol">$</string>
    <string name="salaryLabel">Salary:\ </string>
    <string name="salaryPrompt">Salary type</string>
    <string name="budgetingTabText">Budgeting</string>
    <string name="tippingTabText">Tipping</string>
    <string name="salaryDebtPayoffLabel">Debt Payoff:\ </string>
    <string name="expensesLabel">Expenses</string>
    <string name="billsExpensesLabel">Bills:\ </string>
    <string name="foodExpensesLabel">Food:\ </string>
    <string name="housingExpensesLabel">Housing:\ </string>
    <string name="transitExpensesLabel">Transit:\ </string>
    <string name="otherExpensesLabel">Other:\ </string>
    <string name="resultsLabel">Results</string>
    <string name="savingsPerCycleExpensesLabel">Savings per Salary:\ </string>
    <string name="timeToPayExpensesLabel">Payoff time:\ </string>
    <string name="savingsOverallExpensesLabel">Final Savings:\ </string>
    <string name="debtLabel">Debt:</string>
    <string-array name="salary_array">
        <item>Hourly</item>
        <item default="default">Monthly</item>
        <item>Quarterly</item>
        <item>Yearly</item>
    </string-array>
</resources>
