<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_default_margin">


    <TableLayout
        android:id="@+id/salaryGrid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false">
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salaryLabel"
            android:id="@+id/salaryLabelTextView"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="center|center_vertical|right"
            android:layout_gravity="center_vertical|right"
            android:layout_span="1"
            android:layout_weight="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="0"
            android:id="@+id/salaryEditText"
            android:layout_row="0"
            android:layout_column="1"
            android:gravity="center|left"
            android:layout_columnSpan="3"
            android:layout_gravity="center_vertical|fill_horizontal"
            android:hint="@string/zeroCurrency"
            android:layout_weight="1"
            android:layout_span="1" />

        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/salarySpinner"
            android:layout_row="0"
            android:layout_column="2"
            android:entries="@array/salary_array"
            android:gravity="center|center_vertical|left"
            android:spinnerMode="dropdown"
            android:prompt="@string/salaryPrompt"
            android:layout_span="2"
            android:layout_weight="0.75"
            android:layout_gravity="center_vertical" />
        </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salaryDebtPayoffLabel"
            android:id="@+id/salaryDebtPayoffLabelTextView"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_vertical|right"
            android:gravity="center_vertical|right"
            android:layout_span="1"
            android:layout_weight="0" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_gravity="center_vertical|fill_horizontal"
            android:layout_weight="1"
            android:layout_span="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/salaryDebtPayoffPercentTextView"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_gravity="center_vertical|left"
            android:gravity="center_vertical|left"
            android:text="%"
            android:layout_span="1"
            android:layout_weight="0" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/expensesGrid"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/sectionSplitSize"
        android:layout_below="@+id/salaryGrid">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Expenses"
            android:id="@+id/expensesLabelTextView"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal|center_horizontal"
            android:gravity="center" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/billsExpensesLabel"
                android:id="@+id/billsExpensesLabelTextView"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="center_vertical|right"
                android:gravity="center_vertical|right" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/billsExpensesSeekBar"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_columnSpan="1"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/billsExpensesTotalTextView"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_gravity="center_vertical|left"
                android:gravity="center_vertical|left"
                android:text="@string/zeroCurrency" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodExpensesLabel"
                android:id="@+id/foodExpensesLabelTextView"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="center_vertical|right"
                android:gravity="center_vertical|right" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/foodExpensesSeekBar"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_columnSpan="1"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/foodExpensesTotalTextView"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_gravity="center_vertical|left"
                android:gravity="center_vertical|left"
                android:text="@string/zeroCurrency" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/housingExpensesLabel"
                android:id="@+id/housingExpensesLabelTextView"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="center_vertical|right"
                android:gravity="center_vertical|right" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/housingExpensesSeekBar"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_columnSpan="1"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/housingExpensesTotalTextView"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_gravity="center_vertical|left"
                android:gravity="center_vertical|left"
                android:text="@string/zeroCurrency" />
        </TableRow>

    </TableLayout>

</RelativeLayout>